--- a/src/index.css
+++ b/src/index.css
@@ -1,60 +1,82 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  font-family: Arial;
+  font-size: 16px;
 }
 
-.month-header {
-  padding: 20px 20px;
-  background: #1abc9c;
+.calendar {
+  float: left;
+  display: block;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  background: white;
+  width: 300px;
+  border: solid 1px #cccccc;
+  margin-bottom: 10px;
+}
+
+.month-label {
+  float: left;
+  text-transform: uppercase;
+  font-weight: bold;
+  width: 100%;
+  background: #2875c7;
+  height: 40px;
+  color: white;
   text-align: center;
 }
 
 .month-text {
-  color: white;
-  font-size: 20px;
-  width: 100%;
-  text-transform: uppercase;
-  letter-spacing: 3px;
-}
-
-.days-header {
-  margin: 0;
-  padding: 10px 0;
-  background-color: #ddd;
-}
-
-.header-item {
+  height: 40px;
+  line-height: 40px !important;
   display: inline-block;
-  width: 13.6%;
-  color: #666;
+  vertical-align: middle;
+}
+.calendar > div.header > i {
+  float: left;
+  width: 40px;
+  font-size: 1.125em;
+  font-weight: bold;
+  position: relative;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  padding: 0 10px;
+  cursor: pointer;
+}
+
+.day-cell {
+  width: 14.28571429%;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  border-left: solid 1px #cccccc;
+  font-size: 0.75em;
   text-align: center;
+  height: 30px;
+  line-height: 30px !important;
+  display: inline-block;
+  vertical-align: middle;
+  background: white;
+  cursor: pointer;
+  color: black;
+}
+
+.week-cell {
+  width: 14.28571429%;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  border-left: solid 1px #cccccc;
+  font-size: 0.75em;
+  text-align: center;
+  height: 30px;
+  line-height: 30px !important;
+  display: inline-block;
+  vertical-align: middle;
+  background: white;
+  cursor: pointer;
+  color: #2875c7;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
 .days-container {
-  padding: 10px 0;
-  background: #eee;
-  margin: 0;
-}
-
-.single-day {
-  list-style-type: none;
-  display: inline-block;
-  width: 13.6%;
-  text-align: center;
-  margin-bottom: 5px;
-  font-size: 12px;
-  color: #777;
-}
-
-.prev {
-  float: left;
-  padding-top: 5px;
-  text-align: center;
-}
-
-.next {
-  float: right;
-  padding-top: 5px;
-  text-align: center;
+  border-top: solid 1px #cccccc;
 }
